--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build Android app
-        run: flutter build apk
+      #- name: Build Android app
+        #run: flutter build apk
 
       #- name: Build Windows app
         #run: flutter build windows
@@ -31,10 +31,10 @@ jobs:
         run: flutter build web
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: actions/deploy-pages@v2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/web
+          branch: gh-pages
+          folder: build/web
 
       - name: Create release
         uses: softprops/action-gh-release@v1
