--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Flutter Build & Release
+name: Build, Release & Deploy
 
 on:
   push:
@@ -6,9 +6,9 @@ on:
       - '*'
 
 jobs:
-  build_and_release:
+  build:
     runs-on: ubuntu-latest
-    continue-on-error: true
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -18,7 +18,7 @@ jobs:
         with:
           flutter-version: '3.10.3'  # Specify the Flutter version you want to use
 
-      - name: Flutter clean
+      - name: Clean Flutter project
         run: flutter clean
 
       - name: Install dependencies
@@ -27,21 +27,50 @@ jobs:
       - name: Build Android app
         run: flutter build apk
 
+      #- name: Build iOS app
+        #run: flutter build ios
+
       #- name: Build Windows app
         #run: flutter build windows
 
       - name: Build web app
         run: flutter build web
 
-      #- name: Deploy to GitHub Pages
-        #uses: actions/deploy-pages@v2
-        #with:
-          #branch: gh-pages
-          #folder: build/web
+  release:
+    needs: build
+    runs-on: ubuntu-latest
 
-      - name: Create release
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Git
+        run: |
+          git config --global user.name ${{ vars.NAME }}
+          git config --global user.email ${{ vars.MAIL }}
+
+      - name: Create Release
+        id: create_release
         uses: softprops/action-gh-release@v1
         with:
           files: |
             ./build/app/outputs/flutter-apk/app-release.apk
+          #./build/ios/iphoneos/Runner.app
           #./build/windows/runner/Runner.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.ACCESS_TOKEN }}
+          publish_dir: build/web
