--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,37 +21,42 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-#       - name: Build Android and web releases
-#         run: flutter build apk --release
-      
-      - name: Build web release
-        run: flutter build web --release --base-href "/${{ github.event.repository.name }}/"
-      
-#       - name: Create GitHub Release
-#         id: create_release
-#         uses: actions/create-release@v1
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-#         with:
-#           tag_name: ${{ github.ref }}
-#           release_name: Release ${{ github.ref }}
-#           draft: false
-#           prerelease: false
+      - name: Extract Tag
+        id: extract_tag
+        run: echo "::set-output name=tag::${{ github.ref }}"
 
-#       - name: Upload Android APK
-#         uses: actions/upload-release-asset@v1
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-#         with:
-#           upload_url: ${{ steps.create_release.outputs.upload_url }}
-#           asset_path: build/app/outputs/flutter-apk/app-release.apk
-#           asset_name: app-release.apk
-#           asset_content_type: application/vnd.android.package-archive
+      - name: Set App Version
+        id: set_app_version
+        run: echo "::set-output name=version::${{ steps.extract_tag.outputs.tag }}"
+
+      - name: Build Android and web releases
+        run: |
+          flutter build apk --release --build-name=${{ steps.set_app_version.outputs.version }} --build-number=${{ steps.set_app_version.outputs.version }}
+          flutter build web --release --base-href "/${{ github.event.repository.name }}/"
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+
+      - name: Upload Android APK
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build/app/outputs/flutter-apk/app-release.apk
+          asset_name: app-release.apk
+          asset_content_type: application/vnd.android.package-archive
 
       - name: Upload Web Build
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.ACCESS_TOKEN }}
           publish_dir: build/web
-          
-
